@@ -10,6 +10,8 @@ Changes of Sylpheed
     * Quotation of forwarded messages is enabled for template now.
     * When marking a message as junk and moving it to a junk folder, proper
       junk folder is selected instead of default one.
+    * When applying a template for a new message, current date is inserted
+      with '%d'.
 
 * 3.4.0beta2 (development)
 
