@@ -1,5 +1,9 @@
 2013-03-29
 
+	* src/quote_fmt_parse.y: insert current date with %d for a new message.
+
+2013-03-29
+
 	* src/summaryview.c: summary_junk(): select proper junk folder instead
 	  of default one.
 
